metadata-retriever/metadata/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus &amp; Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Gate_Keeper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/*
Created By Polaris Yu 2013-8-23
Function: check &quot;Dealer Sales Gate Keeper&quot;for receiving leads assigned from Head Office
Used By: Trigger
*/</description>
        <label>Dealer Sales Gate Keeper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Recipient_Type__c</fullName>
        <label>EOC Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>150 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days CC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finance_Lead_Type__c</fullName>
        <label>Finance Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key 2 Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case a dealer contact will be set to inactive the possibly assigned SFDC dealer portal licence will become available to used again within the dealership.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Bodywork - Paint Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodywork - Panel Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodywork - Panel Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management – Accounts Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management – Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management – Corporate Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Dealer Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management – Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - F&amp;I Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Fixed Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management – General Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Parts Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management - Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Staff - Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Staff - Non Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts/Accessories Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts – Apprentice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts – Interpreter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Cadet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Consultant (AMG Specialist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Consultant (Corporate/Fleet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Workshop Controller/Foreman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Technician</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LDCL_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Customer ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Escalation_Recipient_Type__c</fullName>
        <label>Lead Escalation Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24H Untouched Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72H Untouched Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Lead Escalation Recipient</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_BusinessUnit__c</fullName>
        <label>Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The contact type for Customer(Company)</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>migrt_source_id__c</fullName>
        <description>Migration source id for referencing.</description>
        <externalId>true</externalId>
        <label>migrt source id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>DealerStaff</fullName>
        <active>true</active>
        <label>DealerStaff</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>